--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Estratec-BI
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Estrategias Analiticas para emprendedores
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,8 +18,8 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: gvcando@gmail.com
+  facebook:gabriela_cando@hotmail.com
   flickr:
   github: barryclark/jekyll-now
   instagram:
