--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Estratec-BI
+name: Estrate-BI
 
 # Short bio or description (displayed in the header)
-description: Estrategias Analiticas para emprendedores
+description: Estratégias Analíticas para emprendedores
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -21,7 +21,7 @@ footer-links:
   email: gvcando@gmail.com
   facebook:gabriela_cando@hotmail.com
   flickr:
-  github: barryclark/jekyll-now
+  github: gcando/jekyll-now
   instagram:
   linkedin:
   pinterest:
