--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@ name: Estrate-BI
 description: Estratégias Analíticas para emprendedores
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
+avatar: https://gcando.github.io/
 # Flags below are optional
 #
 
