--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Estrate-BI
 description: Estratégias Analíticas para emprendedores
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://gcando.github.io/
+avatar: "https://raw.githubusercontent.com/gcando/jekyll-now/master/images/descarga(2).jpg"
 # Flags below are optional
 #
 
